--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,6 @@
 @import "./variable.scss";
+@import "./fonts/iconfont.css";
+@import "./common/animation.scss";
 @import "./base.scss";
 @import "./mixins/button.scss";
 @import "./components/index.scss";
