--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -14,6 +14,7 @@
   }
   &-text {
     border-color: transparent;
+    padding: 0;
     &:not([disabled]):hover {
       color: $btn-border-hover-color;
       border-color: transparent;
