add collapse/update icon

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "./variable.scss";
 @import "./fonts/iconfont.css";
 @import "./common/animation.scss";
+@import "./common/base.scss";
 @import "./base.scss";
 @import "./mixins/button.scss";
 @import "./components/index.scss";
