--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,3 +1,5 @@
 @import "./button.scss";
 @import "./button-group.scss";
 @import "./icon.scss";
+@import "./collapse.scss";
+@import "./collapse-item.scss";
