--- a/src/styles/common/base.scss
+++ b/src/styles/common/base.scss
@@ -2,3 +2,10 @@
   word-break: break-all;
   white-space: pre-wrap;
 }
+
+@mixin absolute-middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
