--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -15,7 +15,7 @@ body {
   font-size: $font-size-small;
   line-height: $line-height-base;
   color: $text-color;
-  background-color: $body-background;
+  background-color: $body-white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
