--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import "./common/animation.scss";
 @import "./common/base.scss";
 @import "./base.scss";
+@import "./mixins/common.scss";
 @import "./mixins/form.scss";
 @import "./mixins/button.scss";
 @import "./components/index.scss";
