--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -24,7 +24,7 @@ $btn-error-color: #ed4014;
 
 $line-height-base: 1;
 $text-color: #515a6e;
-$body-background: #fff;
+$body-white: #fff;
 $link-color: $theme-color;
 $link-hover-color: $link-color;
 $link-active-color: $link-color;
@@ -44,3 +44,5 @@ $collapse-transition-time: .3s;
 
 $form-transition-time: .15s;
 $form-transition-type: ease-in;
+
+$checkbox-radius: 2px;
