--- a/src/styles/components/button-group.scss
+++ b/src/styles/components/button-group.scss
@@ -1,18 +1,3 @@
-@mixin buttonGroupDefault {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-@mixin buttonGroupZindex {
-  float: left;
-  position: relative;
-  &:not(:last-child) {
-    &:hover {
-      z-index: 2;
-    }
-  }
-}
-
 .dr-button-group {
   @include buttonGroupDefault;
   > .dr-button {
@@ -20,17 +5,7 @@
     &:not(:first-child) {
       margin-left: -1px;
     }
-    &:not(:first-child):not(:last-child) {
-      border-radius: 0;
-    }
-    &:first-child {
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-    }
-    &:last-child {
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
+    @include groupRadius;
     &-primary, &-info, &-success, &-warning, &-error {
       &:not(:first-child) {
         margin-left: 0;
@@ -49,17 +24,7 @@
       &:not(:first-child) {
         margin-top: -1px;
       }
-      &:not(:first-child):not(:last-child) {
-        border-radius: 0;
-      }
-      &:first-child {
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
-      }
-      &:last-child {
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-      }
+      @include groupVertivalRadius;
       &-primary, &-info, &-success, &-warning, &-error {
         &:not(:first-child) {
           margin-top: 0;
