--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -5,6 +5,7 @@ $font-size: 14px;
 $border-color: #dcdfe6;
 $disabled-color: #c0c4cc;
 $disabled-bg-color: #f5f7fa;
+$border-hsla-color: hsla(0, 0%, 100%, .5);
 
 
 $btn-radius-base: 4px;
