--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -5,3 +5,6 @@
 @import "./collapse-item.scss";
 @import "./radio.scss";
 @import "./checkbox.scss";
+@import "./switch.scss";
+@import "./badge.scss";
+@import "./avatar.scss";
