--- a/src/styles/mixins/common.scss
+++ b/src/styles/mixins/common.scss
@@ -47,3 +47,13 @@
     border-top-right-radius: 0;
   }
 }
+
+@mixin clearFix {
+  &::after {
+    content: "";
+    display: block;
+    height: 0;
+    visibility: hidden;
+    clear: both;
+  }
+}
