--- a/src/styles/mixins/common.scss
+++ b/src/styles/mixins/common.scss
@@ -57,3 +57,11 @@
     clear: both;
   }
 }
+
+@mixin responsive ($key, $map: $media-points) {
+  @if map-has-key($map, $key) {
+    @media only screen and #{inspect(map-get($map, $key))} {
+      @content
+    }
+  }
+}
