--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -10,3 +10,6 @@
 @import "./avatar.scss";
 @import "./row.scss";
 @import "./col.scss";
+@import "./breadcrumb.scss";
+@import "./breadcrumb-item.scss";
+@import "./tag.scss";
