--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -15,6 +15,17 @@ $body-white: #fff;
 $border-hsla-color: hsla(0, 0%, 100%, .5);
 $aaa: rgb(212, 209, 18);
 
+$light-primary-color: #ecf5ff;
+$light-primary-border-color: #d9ecff;
+$light-info-color: #f4f4f5;
+$light-info-border-color: #e9e9eb;
+$light-success-color: #f0f9eb;
+$light-success-border-color: #e1f3d8;
+$light-warning-color: #fdf6ec;
+$light-warning-border-color: #faecd8;
+$light-error-color: #fef0f0;
+$light-error-border-color: #fde2e2;
+
 
 $btn-radius-base: 4px;
 $btn-radius-small: 3px;
