--- a/src/styles/common/animation.scss
+++ b/src/styles/common/animation.scss
@@ -9,3 +9,12 @@
     transform: rotate(1turn);
   }
 }
+
+@keyframes progress-active {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
