--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -10,6 +10,7 @@ $font-size-small: 12px;
 $border-color: #dcdfe6;
 $disabled-color: #c0c4cc;
 $disabled-bg-color: #f5f7fa;
+$gray-color: #ebeef5;
 $fail-color: #333333;
 $body-white: #fff;
 $border-hsla-color: hsla(0, 0%, 100%, .5);
