--- a/src/styles/components/progress.scss
+++ b/src/styles/components/progress.scss
@@ -46,6 +46,7 @@
     border-radius: 100px;
     white-space: nowrap;
     position: relative;
+    float: left;
     transition: all .2s linear;
     &::after {
       content: '';
