增加 进度环

--- a/src/styles/components/progress.scss
+++ b/src/styles/components/progress.scss
@@ -95,4 +95,20 @@
       font-size: 14px;
     }
   }
+
+  // circle
+  &-circle-default {
+    width: auto;
+    position: relative;
+    .dr-progress-text {
+      @include absolute-middle;
+      margin-left: 0;
+    }
+    .dr-icon-default {
+      font-size: 16px;
+    }
+  }
+  &-circle {
+    display: inline-block;
+  }
 }
