--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -14,7 +14,6 @@ $gray-color: #ebeef5;
 $fail-color: #333333;
 $body-white: #fff;
 $border-hsla-color: hsla(0, 0%, 100%, .5);
-$aaa: rgb(212, 209, 18);
 
 $light-primary-color: #ecf5ff;
 $light-primary-border-color: #d9ecff;
@@ -59,6 +58,9 @@ $code-family: Consolas, Menlo, Courier, monospace;
 $collapse-border: 1px solid #dcdee2;
 $collapse-transition: ease-in-out;
 $collapse-transition-time: .3s;
+
+
+$rate-bg-color: #e9e9e9;
 
 
 $form-transition-time: .15s;
