--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -42,6 +42,7 @@
       font-size: 14px;
       cursor: pointer;
       margin-left: 3px;
+      color: $disabled-color;
     }
   }
   &-disabled {
