--- a/src/styles/components/progress.scss
+++ b/src/styles/components/progress.scss
@@ -60,7 +60,7 @@
     display: inline-block;
     color: $body-white;
     margin: 0 5px;
-    font-size: 12px;
+    font-size: $font-size-small;
     vertical-align: middle;
   }
   &-success {
