--- a/src/styles/components/checkbox.scss
+++ b/src/styles/components/checkbox.scss
@@ -1,7 +1,7 @@
 @mixin mini-checkbox {
   .dr-checkbox-inner {
-    width: 12px;
-    height: 12px;
+    width: $font-size-small;
+    height: $font-size-small;
     &::after {
       width: 3px;
       height: 6px;
@@ -70,7 +70,7 @@
   }
   &-label {
     padding-left: 10px;
-    user-select: none; 
+    user-select: none;
   }
   &-checked {
     .dr-checkbox-inner {
@@ -83,7 +83,7 @@
     .dr-checkbox-label {
       color: $theme-color;
     }
-  } 
+  }
   &-disabled {
     cursor: not-allowed;
     .dr-checkbox-inner {
@@ -124,12 +124,12 @@
     }
     &.dr-checkbox-small {
       padding: 8px 12px 4px 6px;
-      font-size: 12px;
+      font-size: $font-size-small;
       @include mini-checkbox;
     }
     &.dr-checkbox-mini {
       padding: 6px 8px 3px 4px;
-      font-size: 12px;
+      font-size: $font-size-small;
       @include mini-checkbox;
     }
   }
@@ -185,19 +185,19 @@
       &-medium {
         .dr-checkbox-default {
           padding: 10px 16px 8px;
-        } 
+        }
       }
       &-small {
         .dr-checkbox-default {
           padding: 8px 12px 7px;
-          font-size: 12px;
-        } 
+          font-size: $font-size-small;
+        }
       }
       &-mini {
         .dr-checkbox-default {
           padding: 6px 8px 5px;
-          font-size: 12px;
-        } 
+          font-size: $font-size-small;
+        }
       }
     }
   }
