--- a/src/styles/components/switch.scss
+++ b/src/styles/components/switch.scss
@@ -16,7 +16,7 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    font-size: 12px;
+    font-size: $font-size-small;
     transition: background-color $animation-time;
     position: relative;
     color: $body-white;
@@ -39,8 +39,8 @@
       &::before {
         content: "";
         display: inline-block;
-        width: 12px;
-        height: 12px;
+        width: $font-size-small;
+        height: $font-size-small;
         border-radius: 50%;
         position: absolute;
         top: 4px;
