--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -77,6 +77,9 @@ $input-small-height: 28px;
 $input-placeholder-color: #c0c4cc;
 
 
+$popper-suggest-transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+
+
 $sm: 768px;
 $md: 1024px;
 $lg: 1200px;
