--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -8,6 +8,8 @@
   &-input {
     .dr-input-inner {
       cursor: pointer;
+      height: auto;
+      min-height: 36px;
     }
     .dr-icon-arrow-right {
       font-size: 18px;
