add/update select

--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -9,7 +9,7 @@
     .dr-input-inner {
       cursor: pointer;
       height: auto;
-      min-height: 36px;
+      min-height: $input-height;
     }
     .dr-icon-arrow-right {
       font-size: 18px;
@@ -25,5 +25,11 @@
         transform: rotate(-90deg);
       }
     }
+  }
+  &-poppper {
+    width: 240px;
+    height: 200px;
+    transform-origin: top center;
+    @include popper;
   }
 }
