--- a/src/styles/mixins/common.scss
+++ b/src/styles/mixins/common.scss
@@ -65,3 +65,9 @@
     }
   }
 }
+
+@mixin popper {
+  background-color: $body-white;
+  box-shadow: $popper-box-shadow;
+  border-radius: $btn-radius-base;
+}
