--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -77,7 +77,8 @@ $input-small-height: 28px;
 $input-placeholder-color: #c0c4cc;
 
 
-$popper-suggest-transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+$popper-suggest-transition: all .3s cubic-bezier(0.23, 1, 0.32, 1);
+$popper-box-shadow: 0 1px 6px rgba(0,0,0,.2);
 
 
 $sm: 768px;
