--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -18,3 +18,6 @@
 @import "./divider.scss";
 @import "./input.scss";
 @import "./select.scss";
+@import "./option.scss";
+
+@import "./popper.scss";
