--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -3,12 +3,13 @@
     display: inline-block;
     width: 100%;
     position: relative;
-    cursor: pointer;
+  }
+  &-wrap {
+    position: relative;
   }
   &-input {
     .dr-input-inner {
       cursor: pointer;
-      height: auto;
       min-height: $input-height;
     }
     .dr-icon-arrow-right {
@@ -42,5 +43,53 @@
   }
   &-disabled {
     cursor: not-allowed;
+  }
+
+  &-option-wrap {
+    max-height: 280px;
+    overflow-y: auto;
+  }
+
+  // 多选
+  &-tags {
+    background-color: $body-white;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    width: calc(100% - 30px);
+    z-index: 5;
+    text-align: left;
+    padding: 5px 5px 0 5px;
+  }
+  &-tag {
+    display: inline-block;
+    vertical-align: middle;
+    background-color: $disabled-bg-color;
+    border: 1px solid $border-color;
+    color: $disabled-text-color;
+    height: 22px;
+    line-height: 22px;
+    padding: 0 8px;
+    border-radius: $btn-radius-base;
+    font-size: $font-size-small;
+    margin: 0 5px 5px 0;
+    .dr-icon-default {
+      margin-left: 6px;
+      vertical-align: middle;
+      font-size: $font-size-small;
+      position: relative;
+      top: -1px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+  }
+
+  // 可搜索
+  &-filter-input {
+    width: 100%;
+    height: 22px;
+    padding: 0 8px;
+    border: none;
+    @include inputStyle;
   }
 }
