--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -19,5 +19,6 @@
 @import "./input.scss";
 @import "./select.scss";
 @import "./option.scss";
+@import "./input-number.scss";
 
 @import "./popper.scss";
