--- a/src/styles/components/input-number.scss
+++ b/src/styles/components/input-number.scss
@@ -72,7 +72,7 @@
     top: -1px;
   }
 
-  &-small {
+  &-medium {
     .dr-input-number-inner {
       height: 32px;
     }
@@ -81,7 +81,7 @@
     }
   }
 
-  &-mini {
+  &-small {
     .dr-input-number-inner {
       height: 28px;
     }
