--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -20,5 +20,6 @@
 @import "./select.scss";
 @import "./option.scss";
 @import "./input-number.scss";
+@import "./pagination.scss";
 
 @import "./popper.scss";
